Cleaning code add and Handling active bar menu per section on desktop

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link " aria-current="page" href="#row-secondary">Accueil</a>
                         </li>
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link" href="#">Fabrique</a>
                         </li>
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link active" href="">Formations</a>
                         </li>
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link " href="">Partenariat</a>
                         </li>
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link " href="">Espaces</a>
                         </li>
-                        <li class="nav-item mx-3">
+                        <li class="nav-item mx-2">
                             <a class="nav-link " href="">Entites</a>
                         </li>
                     </ul>
@@ -117,7 +117,7 @@
                     </p>
                     <div class="row align-items-center">
                         <!-- menu secondaire -->
-                        <div class="menu secondary-menu position-fixed d-md-none">
+                        <div class="menu secondary-menu position-fixed d-md-none secondary-menu-public sp-hidden-left">
                             <p
                                 class=" active align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
@@ -127,7 +127,7 @@
                                 Femme
                             </p>
 
-                            <p
+                            <!-- <p
                                 class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconKidsblanc.svg"
@@ -139,6 +139,22 @@
                                 class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconPshblanc.svg"
+                                        title="icon"></object>
+                                </span>
+                                PSH
+                            </p> -->
+                            <p
+                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                <span class="d-flex align-items-center">
+                                    <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
+                                        title="icon"></object>
+                                </span>
+                                Kids
+                            </p>
+                            <p
+                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                <span class="d-flex align-items-center">
+                                    <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
                                         title="icon"></object>
                                 </span>
                                 PSH
@@ -157,7 +173,7 @@
                             <div class="left-bloc my-4 d-flex align-items-center  align-items-sm-start ">
                                 <div class="vertical-bar">
                                 </div>
-                                <div class="menu flex-column menu-public" style="border: 0ch;">
+                                <div class="menu flex-column menu-public">
                                     <p
                                         class="active align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
@@ -328,7 +344,7 @@
                     </p>
                     <div class="row align-items-center p-relative">
                         <!-- menu secondaire -->
-                        <div class="menu secondary-menu position-fixed d-md-none">
+                        <div class="menu secondary-menu position-fixed d-md-none secondary-menu-parcours">
                             <p
                                 class="active align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
@@ -648,7 +664,7 @@
             </div>
             <div class="col px-3">
                 <p class="d-block sp-link-light fs-4">Notre Newsletter</p>
-                <p style="width: 80%;">Souscrivez vous à notre newsletter pour ne pas manquer aucune de nos acticites</p>
+                <p id="newsletter-text">Souscrivez vous à notre newsletter pour ne pas manquer aucune de nos acticites</p>
                 <p class="sp-input-group">
                     <input type="email" placeholder="email@gmail.com" id="email">
                     <input type="button" value="S'abonner" class="sp-btn-danger" id="btn-submit">
