deleting redondant bootstrap class

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-white fw-bold">
             <div class="container">
-                <a class="navbar-brand" href="#" title="Sogo Simplon">
-                    <img src="./formations/img/simplonSN.png" alt="Logo Simplon" width="150"
-                        class=" d-inline-block align-text-top">
+                <a class="navbar-brand" href="#" title="Logo Simplon">
+                    <img src="./formations/img/simplonSN.png" alt="Logo Simplon" width="150" class=" d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler border  border-2 border-black" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -57,7 +56,7 @@
                             <a class="nav-link " href="">Entites</a>
                         </li>
                     </ul>
-                    <form class="d-flex flex-column flex-lg-row flex-md-column align-items-lg-center">
+                    <form class="d-flex flex-column flex-lg-row align-items-lg-center">
                         <label for="search"
                             class="align-items-center d-flex justify-content-center mt-lg-0 mt-3 order-1 order-lg-0 rounded rounded-pill">
                             <input class="border-0 mw-100" id="search" type="search" placeholder="Search"
@@ -133,7 +132,7 @@
                         <!-- menu secondaire -->
                         <div class="menu secondary-menu position-fixed d-md-none secondary-menu-public sp-hidden-left">
                             <p
-                                class=" active align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class=" active align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconFemmeBlanc.svg"
                                         title="icon"></object>
@@ -141,7 +140,7 @@
                                 Femme
                             </p>
                             <p
-                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
                                         title="icon"></object>
@@ -149,7 +148,7 @@
                                 Kids
                             </p>
                             <p
-                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
                                         title="icon"></object>
@@ -157,7 +156,7 @@
                                 PSH
                             </p>
                             <p
-                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
                                         title="icon"></object>
@@ -166,13 +165,13 @@
                             </p>
                         </div>
                         <!-- menu -->
-                        <div class="d-none d-md-inline-block col-md-2 col-sm-12 p-0 px-sm-0 text-center">
+                        <div class="d-none d-md-inline-block col-md-2 col-sm-12 p-0 text-center">
                             <div class="left-bloc my-4 d-flex align-items-center  align-items-sm-start ">
                                 <div class="vertical-bar">
                                 </div>
                                 <div class="menu flex-column menu-public">
                                     <p
-                                        class="active align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="active align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml" data="./formations/img/SVG/IconFemmeBlanc.svg"
                                                 title="icon"></object>
@@ -180,7 +179,7 @@
                                         Femme
                                     </p>
                                     <p
-                                        class="align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml" data="./formations/img/SVG/IconKidsblanc.svg"
                                                 title="icon"></object>
@@ -188,7 +187,7 @@
                                         Kids
                                     </p>
                                     <p
-                                        class="align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml" data="./formations/img/SVG/IconPshblanc.svg"
                                                 title="icon"></object>
@@ -196,7 +195,7 @@
                                         PSH
                                     </p>
                                     <p
-                                        class="align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml"
                                                 data="./formations/img/SVG/IconDiscoverBlanc.svg" title="icon"></object>
@@ -343,7 +342,7 @@
                         <!-- menu secondaire -->
                         <div class="menu secondary-menu position-fixed d-md-none secondary-menu-parcours">
                             <p
-                                class="active align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="active align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconDiscoverBlanc.svg"
                                         title="icon"></object>
@@ -351,7 +350,7 @@
                                 Decouverte
                             </p>
                             <p
-                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/father-svgrepo-com.svg"
                                         title="icon"></object>
@@ -359,7 +358,7 @@
                                 Initiation
                             </p>
                             <p
-                                class="align-items-center d-flex p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                class="align-items-center d-flex p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                 <span class="d-flex align-items-center">
                                     <object type="image/svg+xml" data="./formations/img/SVG/IconOrienteMetierBlanc.svg"
                                         title="icon"></object>
@@ -368,13 +367,13 @@
                             </p>
                         </div>
                         <!-- menu -->
-                        <div class="d-none d-md-inline-block col-md-2 col-sm-12 p-0 px-sm-0 text-center">
+                        <div class="d-none d-md-inline-block col-md-2 col-sm-12 p-0 text-center">
                             <div class="left-bloc my-4 d-flex align-items-center  align-items-sm-start  ">
                                 <div class="vertical-bar">
                                 </div>
                                 <div class="menu flex-column menu-parcours">
                                     <p
-                                        class="active align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="active align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml"
                                                 data="./formations/img/SVG/IconDiscoverBlanc.svg" title="icon"></object>
@@ -382,7 +381,7 @@
                                         Decouverte
                                     </p>
                                     <p
-                                        class="align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml"
                                                 data="./formations/img/SVG/father-svgrepo-com.svg"
@@ -391,7 +390,7 @@
                                         Initiation
                                     </p>
                                     <p
-                                        class="align-items-center d-flex my-4 p-1 p-sm-1 pe-md-3 rounded-pill rounded-start shadow-sm">
+                                        class="align-items-center d-flex my-4 p-1 pe-md-3 rounded-pill rounded-start shadow-sm">
                                         <span class="d-flex align-items-center">
                                             <object type="image/svg+xml"
                                                 data="./formations/img/SVG/IconOrienteMetierBlanc.svg"
