--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -236,7 +236,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -252,7 +252,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -284,7 +284,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -300,7 +300,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -416,7 +416,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -432,7 +432,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -448,7 +448,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class="d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link sp-btn-danger">En
+                                                class="d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link sp-btn-danger">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -464,7 +464,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -480,7 +480,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -496,7 +496,7 @@
                                                 make up the bulk of the
                                                 card's content.</p>
                                             <a href="#"
-                                                class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">En
+                                                class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">En
                                                 savoir plus</a>
                                         </div>
                                     </div>
@@ -552,7 +552,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
                                         la formation</a>
                                 </div>
                             </div>
@@ -583,7 +583,7 @@
                                         l’exercice du métier
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
                                         la formation</a>
                                 </div>
                             </div>
@@ -611,7 +611,7 @@
                                         quaerat blanditiis inventore, iusto, ut accusamus!
                                     </p>
                                     <a href="#"
-                                        class=" d-inline-block my-2  sp-text-sm  px-2 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
+                                        class=" d-inline-block my-2  sp-text-sm  px-3 py-1 sp-rounded-link  sp-btn-danger ">Decouvrir
                                         la formation</a>
                                 </div>
                             </div>
@@ -628,7 +628,7 @@
     <!-- End Main -->
     <!-- Section footer -->
     <footer class="sp-footer ">
-        <div class=" py-5 my-5 d-sm-inline-block d-md-flex text-white justify-md-content-around">
+        <div class=" pt-5 mt-5 d-sm-inline-block d-md-flex text-white justify-md-content-around">
             <div class="col logo-icons d-md-flex px-3">
                 <img src="./formations/img/logoWhiteSimplon.svg" alt="Logo simplon format blanc" width="150">
                 <div class="icons my-5">
@@ -643,18 +643,18 @@
                     <a href="" class="d-block sp-link-light fs-4">Voir plus</a>
                 </p>
                 <p>
-                    <a href="" class="d-block sp-link-light">Conditions d'utilisation</a>
-                    <a href="" class="d-block sp-link-light">Notre Histoire</a>
-                    <a href="" class="d-block sp-link-light">Politique de confidentialite</a>
-                    <a href="" class="d-block sp-link-light">FAQ</a>
+                    <a href="" class="d-block sp-link-light my-2">Conditions d'utilisation</a>
+                    <a href="" class="d-block sp-link-light my-2">Notre Histoire</a>
+                    <a href="" class="d-block sp-link-light my-2">Politique de confidentialite</a>
+                    <a href="" class="d-block sp-link-light my-2">FAQ</a>
                 </p>
             </div>
             <div class="col px-3">
                 <p class="d-block sp-link-light fs-4">Cordonnees</p>
                 <p class="d-block sp-link-light ">Cite Keur Goor Gui ,<br> Sicap Liberte 6,<br> Dakar Senegal</p>
                 <p>
-                    <a href="" class="d-block sp-link-light">simplon@gmail.com</a>
-                    <a href="" class="d-block sp-link-light">simplon@contactgmail.com</a>
+                    <a href="" class="d-block sp-link-light my-2">simplon@gmail.com</a>
+                    <a href="" class="d-block sp-link-light my-2">simplon@contactgmail.com</a>
                 </p>
                 <p class="d-block ">(+221) 33 234 43 32 <br> (+221) 88 348 98 43 32</p>
             </div>
@@ -669,7 +669,7 @@
             </div>
         </div>
         <div
-            class="copyright text-white p-3 mt-5 d-flex align-items-center flex-column flex-sm-row justify-content-between">
+            class="copyright text-white p-3 d-flex align-items-center flex-column flex-sm-row justify-content-between">
             <span>© 2021 Simplon. All rights reserved.</span>
             <span class=" ">made with <i class="bi bi-suit-heart-fill text-white"></i> <strong> by
                     SimplonP4</strong></span>
