Adding arrow icon for view more button

--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
                             </div>
                             <div class=" col-12 px-0 text-end alert">
                                 <a href="" class="text-decoration-underline alert-dark  alert-link bg-white">Afficher
-                                    tout</a>
+                                    tout 
+                                <i class="bi bi-arrow-right"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -504,7 +506,9 @@
                             </div>
                             <div class=" col-12 px-0 text-end alert">
                                 <a href="" class="text-decoration-underline alert-dark  alert-link bg-white">Afficher
-                                    tout</a>
+                                    tout
+                                    <i class="bi bi-arrow-right"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -618,7 +622,9 @@
                         </div>
                     </div>
                     <div class=" col-12 px-0 text-end alert">
-                        <a href="" class="text-decoration-underline alert-dark  alert-link bg-white">Afficher tout</a>
+                        <a href="" class="text-decoration-underline alert-dark  alert-link bg-white">Afficher tout
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
             </div>
