fixing cards height

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div class="col-md  col-sm-12">
                             <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -226,7 +226,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -242,7 +242,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -258,7 +258,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -274,7 +274,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -290,7 +290,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Seo Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -408,7 +408,7 @@
                         <div class="col-md  col-sm-12">
                             <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -424,7 +424,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -440,7 +440,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -456,7 +456,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -472,7 +472,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -488,7 +488,7 @@
                                     </div>
                                 </div>
                                 <div class="my-3 justify-content-center ">
-                                    <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                                    <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Web Referencement Illustration">
                                         <div class="card-body sp-rounded-bottom-15">
@@ -534,7 +534,7 @@
                     </p>
                     <div class="row me-0 row-cols-sm-1 sp-row-cols-md-3 ">
                         <div class="my-3  justify-content-center ">
-                            <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                            <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                 <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
                                     <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
@@ -562,7 +562,7 @@
                             </div>
                         </div>
                         <div class="my-3  justify-content-center ">
-                            <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                            <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                 <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
                                     <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
@@ -593,7 +593,7 @@
                             </div>
                         </div>
                         <div class="my-3  justify-content-center ">
-                            <div class="card shadow-sm text-center sp-rounded-top-15 sp-rounded-bottom-15">
+                            <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                 <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
                                     <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
