fixed card columns number for handling responsivity

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 
                             </div>
                         </div>
-                        <!-- card formation -->
+                        <!-- card formation --> 
                         <div class="col-md  col-sm-12">
-                            <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
+                            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
                                 <div class="my-3 justify-content-center ">
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
@@ -406,7 +406,7 @@
                         </div>
                         <!-- card formation -->
                         <div class="col-md  col-sm-12">
-                            <div class=" row  row-cols-md-2 row-cols-lg-3 row-cols-sm-auto">
+                            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
                                 <div class="my-3 justify-content-center ">
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
